api: add kb article crud (#155)
